# emokit

./: CMakeLists.txt  INSTALL  README.md
examples/emokit_osc/: CMakeLists.txt  emokit_osc.cpp
examples/emokit_osc/processing/emokit_osc/: emokit_osc.pde
examples/emokitd/: emokitd.c
include/oscpack/osc/: OscPrintReceivedElements.cpp
